--- a/styles/resources.module.css
+++ b/styles/resources.module.css
@@ -86,6 +86,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    margin-bottom: 0.1rem;
 }
 
 .subheader {
