--- a/styles/stats.module.css
+++ b/styles/stats.module.css
@@ -7,7 +7,7 @@
     padding-top: 1rem;
     gap: 2rem;
     width: 414px;
-    background-color: white;
+    background-color: var(--secondary-color);
 }
 
 .header{
@@ -38,7 +38,7 @@
 
 .section1{
     text-align: center;
-    background-color: white;
+    background-color: var(--secondary-color);
     margin-top: 1rem;
     padding: 5rem;
 }
@@ -54,7 +54,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
+    background-color: var(--secondary-color);
     margin-top: 0.625rem;
     padding: 2rem 1rem;
     gap: 1rem;
