--- a/styles/stories.module.css
+++ b/styles/stories.module.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: row;
     width: 414px;
-    background-color: white;
+    background-color: var(--secondary-color);
     white-space: nowrap;
     gap: 2rem;
     height: 113px;
@@ -28,7 +28,7 @@
 }
 
 .storycontent{
-    background-color: white;
+    background-color: var(--secondary-color);
     margin-top: 0.625rem;
     padding: 2rem;
 }
